fixed toggle buton alignment issue

--- a/components/src/core/components/TableSidebar/table-left-panel.scss
+++ b/components/src/core/components/TableSidebar/table-left-panel.scss
@@ -45,7 +45,7 @@
     &.with-secondary-collapsed {
       padding-right: 10px;
       .oxd-table-left-panel--separator {
-        margin: 0.5rem 0.3rem 1rem 0.5rem;
+        margin: 0rem 0.9rem 1rem 0.5rem;
       }
     }
   }
